name:          promises
category:      Lazy, Concurrent
version:       0.3
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/promises/
bug-reports:   http://github.com/ekmett/promises/issues
copyright:     Copyright (C) 2015 Edward A. Kmett
build-type:    Simple
tested-with:   GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2,
               GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.3
synopsis:      Lazy demand-driven promises
description:   Lazy demand-driven promises.

extra-source-files:
  .gitignore
  README.markdown
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/promises.git

library
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src

  exposed-modules:
    Data.Promise

  build-depends:
    base      >= 4.6 && < 5,
    primitive >= 0.6 && < 1
